[package]
name = "occlum-ra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webpki = "0.22.0"
webpki-roots = "0.21"
base64 = "0.9.2"
pem = "0.8"
chrono  = "=0.4.10"
yasna   = { git = "https://github.com/sgx-test/yasna.rs", features = ["bit-vec", "num-bigint", "chrono"] }
bit-vec = "*"
rand_core = { version = "0.5.1", features = ["getrandom"] }
num-bigint = "0.4.2"
ring = "0.16.20"
sha2 = { version = "^0.8", default-features = false }
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git", rev = "v1.1.3" }
itertools = { version = "0.8", default-features = false }
hex = { version = "0.4", default-features = false }
log = { version = "0.4.14" }
serde = { version = "=1.0.136", features = ["derive"] }
serde_json = "1.0"

occlum_dcap = { git = "https://github.com/ABMatrix/occlum" }


[patch.crates-io]
ring = { version = "0.16.20", path = "../ring-0.16.20" }