[package]
name = "rust_app"
version = "1.0.0"
authors = ["He Sun <bochang.sh@antfin.com>"]
build = "build.rs"
edition = "2021"

[dependencies]
libc = "0.2"
occlum-ra = { path = "../occlum-ra" }
env_logger = "0.9.0"

[build-dependencies]
cc = "1.0"

[patch.crates-io]
ring = { git = "https://github.com/sgx-test/ring" ,default-features = false, features = ["alloc"] }