[package]
name = "rust_app"
version = "1.0.0"
authors = ["He Sun <bochang.sh@antfin.com>"]
build = "build.rs"
edition = "2021"

[dependencies]
libc = "0.2"
occlum-ra = { path = "../occlum-ra" }
env_logger = "0.9.0"
db-wrap = { git = "https://github.com/ABMatrix/db-wrap.git", branch = "main" }
hex = "0.4.3"
serde = { version = "1.0.159" , features = [ "derive"] }
serde_json = "1.0.96"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"

[build-dependencies]
cc = "1.0"

[patch.crates-io]
ring = { git = "https://github.com/sgx-test/ring" ,default-features = false, features = ["alloc"] }