[package]
name = "rust_app"
version = "1.0.0"
authors = ["He Sun <bochang.sh@antfin.com>"]
build = "build.rs"
edition = "2021"

[dependencies]
libc = "0.2"
#occlum-ra = { path = "../occlum-ra" }
env_logger = "0.9.0"
rust-gmp-kzen = { version = "0.5.1", git = "https://github.com/sgx-test/rust-gmp", branch = "static_link" }
zk-paillier = { git = "https://github.com/sgx-test/zk-paillier", branch = "0.3.12-generic" }

[dependencies.paillier]
git = "https://github.com/sgx-test/rust-paillier-sgx"
branch = "0.3.10-generic"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"

[build-dependencies]
cc = "1.0"

#[patch.crates-io]
#ring = { git = "https://github.com/sgx-test/ring" ,default-features = false, features = ["alloc"] }